force-app/main/default/objects/PricebookEntry/fields/LegacyProductId__c.field-meta.xml
<CustomField>
    <fullName>LegacyProductId__c</fullName>
    <externalId>true</externalId>
    <label>LegacyProductId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>