force-app/main/default/objects/PricebookEntry/fields/MDF_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>MDF_Max_Amount__c</fullName>
    <label>MDF Max Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>