force-app/main/default/objects/PricebookEntry/fields/NVIDIA_MTM_Number__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_MTM_Number__c</fullName>
    <label>NVIDIA MTM Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>