force-app/main/default/objects/PricebookEntry/fields/POS_Price__c.field-meta.xml
<CustomField>
    <fullName>POS_Price__c</fullName>
    <description>POS Price Used for SuRF NPN Dashboards</description>
    <label>POS Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>