force-app/main/default/objects/PricebookEntry/fields/Sample_Standard_Price__c.field-meta.xml
<CustomField>
    <fullName>Sample_Standard_Price__c</fullName>
    <description>As per Jira #SDS-2935</description>
    <label>Sample Standard Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>