force-app/main/default/objects/PricebookEntry/listViews/SW_Service_Products1.listView-meta.xml
<ListView>
    <fullName>SW_Service_Products1</fullName>
    <columns>PRODUCT.NAME</columns>
    <columns>PRODUCT.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY_ENUM</columns>
    <columns>Product2.Product_Type__c</columns>
    <columns>Product2.Product_Line__c</columns>
    <columns>Product2.SBQQ__RenewalProduct__c</columns>
    <columns>Product2.SBQQ__SubscriptionType__c</columns>
    <columns>Product2.LegacyProductId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRICEBOOK.NAME</field>
        <operation>equals</operation>
        <value>SW &amp; Service Price Book</value>
    </filters>
    <label>SW &amp; Service Products1</label>
    <language>en_US</language>
    <sharedTo>
        <group>CPQ_Admin</group>
        <group>CPQ_Renewal_Users</group>
    </sharedTo>
</ListView>